# dae4py

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  meson.build  pyproject.toml
dae4py/: benchmark.py  consistent_initial_conditions.py  dae4pymodule.c  dae_problem.py  meson copy.build  meson.build
dae4py/bdf/: __init__.py  bdf.py  meson.build
dae4py/butcher_tableau/: __init__.py  gauss_legendre_butcher_tableau.py  meson.build  radau_butcher_tableau.py
dae4py/dassl/: dassl.h  dasslmodule.c  meson.build
dae4py/fortran/: common.h  fortran_module.c  meson.build
dae4py/fortran/dassl/: dassl.h
dae4py/fortran/dassl/src/: ddassl.f
dae4py/fortran/pside/: pside.h
dae4py/fortran/radau/: radau.h
dae4py/irk/: __init__.py  irk.py  irk_richardson.py  meson.build
dae4py/math/: __init__.py  meson.build  newton.py  simplified_newton.py
dae4py/pside/: meson.build  pside.h  psidemodule.c
dae4py/pside/src/: pside.f
dae4py/radau/: __init__.py  meson.build  radau.h  radau.py
dae4py/src/: meson.build  psidemodule.c
examples/: brenan copy.f90  brenan.f90  consistent_initial_conditions.py  example.py  extended_prothero_robinson.py  importance_L_stability.py  one_element_timoshenko_rod.py  one_step_dhalquist.py  one_step_prothero_robinson.py  qr_column_pivoting.py  stability_domains.py  van_der_pol.f90
examples/C++/: brenan_ida.cpp
examples/DAE/: brenan.py  brenan_old.py  circular_motion.py  circular_motion_index1.py  driven_cavity.py  jay_index2.py  knife_edge.py  knife_edge_index1.py  prothero_robinson_dae.py
examples/DAE/backward_facing_step/: backward_facing_step.pvsm  backward_facing_step.py  backward_facing_step_inflow_profile.py  backward_facing_step_simple.py  lid_driven_cavity.py
examples/DAE/backward_facing_step/reference/: readme.txt
examples/IDE/: kvaerno_index1_nonlinear_yp.py
examples/IDE/kvaerno/: kvaerno.py  run.py
examples/ODE/: harmonic_oscillator.py  prothero_robinson.py  three_body_problem.py  van_der_pol.py
examples/fortran/: brenan_dassl.f90  brenan_pside.f90  transamp.f  weissinger.f90
examples/index0/: three_body_problem.py
examples/index0/clairaut/: clairaut.py  run.py  run_y.py
examples/index0/dahlquist/: dahlquist.py  run.py
examples/index0/prothero_robinson/: prothero_robinson.py  run.py
examples/index0/van_der_pol/: run.py  van_der_pol.py
examples/index1/backward_facing_step/: backward_facing_step.py
examples/index1/brenan/: brenan.py  run.py  work_precision.py
examples/index1/extended_prothero_robinson/: extended_prothero_robinson.py  run.py
examples/index1/robertson/: robertson.py  run.py
examples/index1/transistor_amplifier/: run.py  transistor_amplifier.py
examples/index2/: fenics.py
examples/index2/Jay/: jay.py
examples/index2/backward_facing_step/: backward_facing_step.pvsm  backward_facing_step.py
examples/index2/jay/: jay.py  run.py
examples/index2/knife_edge/: knife_edge.py  run.py
examples/index3/particle_circular_track/: particle_circular_track.py  run.py
examples/index3/pendulum/: pendulum.py
pside/src/: meson.build  psidemodule.c
src/: pside-f2pywrappers.f  psidemodule.c
tests/: test_butcher_tableau.py  test_consistent_initial_conditions.py  test_irk.py  test_newton.py
