[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'dae4py'
version = '0.0.1'
description = 'Python wrapper of DAE/IDE fotran solver.'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE.txt'}
authors = [
  {name = 'Jonas Breuling', email = 'jonas.breuling@inm.uni-stuttgart.de'},
]